--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 spring.application.name=backend
 
 # MySQL 数据库连接
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/pandora_repo?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Flyway 配置（可选，默认自动扫描 db/migration）
 spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
+# 后端url
+server.port = 8080
+server.address = 0.0.0.0
+
+management.endpoints.web.exposure.include=health,info
