--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,28 @@ server.address = 0.0.0.0
 
 management.endpoints.web.exposure.include=health,info
 
+# ===== Redis 配置 =====
+# Redis 服务器地址
+spring.data.redis.host=localhost
+# Redis 端口
+spring.data.redis.port=6379
+# Redis 密码（本地无密码可不配置）
+# spring.data.redis.password=
+# Redis 数据库索引（0-15）
+spring.data.redis.database=0
+# 连接超时时间（毫秒）
+spring.data.redis.timeout=3000
+
+# Redis 连接池配置 (Lettuce)
+spring.data.redis.lettuce.pool.max-active=15
+spring.data.redis.lettuce.pool.max-idle=10
+spring.data.redis.lettuce.pool.min-idle=5
+spring.data.redis.lettuce.pool.max-wait=2000ms
+
+# Redisson 配置（分布式锁）
+# Redisson 会自动查找 classpath:redisson-config.yml
+# 如果需要指定路径，使用: spring.redisson.config=classpath:redisson-config.yml
+
+# ===== Token 清理配置 =====
+# 启动时是否清理过期 Token（0=不清理，1=清理）
+cleanup.on.start=0
