--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=backend
 # MySQL 数据库连接
 spring.datasource.url=jdbc:mysql://localhost:3306/pandora_repo?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Gkm104021
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Flyway 配置（可选，默认自动扫描 db/migration）
