--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,13 @@ spring.data.redis.lettuce.pool.max-wait=2000ms
 # ===== Token 清理配置 =====
 # 启动时是否清理过期 Token（0=不清理，1=清理）
 cleanup.on.start=0
+
+# ===== GLM-4.6 API 配置 =====
+# GLM API Key (请替换为你的实际 API Key)
+glm.api-key=997368444eb84f49950415255ef5a707.DgPiN0uDzSRgusFG
+# GLM API URL
+glm.api-url=https://open.bigmodel.cn/api/paas/v4
+# 默认模型
+glm.model=glm-4
+# 请求超时时间（秒）
+glm.timeout=60
