--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=backend
 # MySQL 数据库连接
 spring.datasource.url=jdbc:mysql://localhost:3306/pandora_repo?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Gkm104021
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Flyway 配置（可选，默认自动扫描 db/migration）
@@ -43,3 +43,13 @@ spring.data.redis.lettuce.pool.max-wait=2000ms
 # ===== Token 清理配置 =====
 # 启动时是否清理过期 Token（0=不清理，1=清理）
 cleanup.on.start=0
+
+# ===== 文件上传配置 =====
+# 我们的文件上传存储目录
+# (使用 / 代替 \，Java 会自动处理 Windows 路径)
+file.upload-dir=D:/pandora/
+
+# 增加文件上传大小限制
+# 默认 Spring 限制为 1MB，这太小了
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=100MB
