修改好的附件功能
完全完美的一版

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,8 +46,8 @@ cleanup.on.start=0
 
 # ===== 文件上传配置 =====
 # 我们的文件上传存储目录
-# (使用 / 代替 \，Java 会自动处理 Windows 路径)
-file.upload-dir=D:/pandora/
+# 修改为项目内的uploads目录
+file.upload-dir=./uploads
 
 # 增加文件上传大小限制
 # 默认 Spring 限制为 1MB，这太小了
