--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,19 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ===== HikariCP 数据库连接池配置 =====
+# 最大连接数（默认 10）
+# SSE 长连接和普通请求都需要数据库连接，需要增加连接池大小
+spring.datasource.hikari.maximum-pool-size=50
+# 最小空闲连接数（默认与 maximum-pool-size 相同）
+spring.datasource.hikari.minimum-idle=10
+# 连接超时时间（毫秒，默认 30000）
+spring.datasource.hikari.connection-timeout=30000
+# 空闲连接最大存活时间（毫秒，默认 600000 = 10分钟）
+spring.datasource.hikari.idle-timeout=600000
+# 连接最大存活时间（毫秒，默认 1800000 = 30分钟）
+spring.datasource.hikari.max-lifetime=1800000
+
 # Flyway 配置（可选，默认自动扫描 db/migration）
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
@@ -15,6 +28,18 @@ spring.flyway.validate-on-migrate=false
 # 后端url
 server.port = 8080
 server.address = 0.0.0.0
+
+# ===== Tomcat 线程池配置 =====
+# SSE 长连接会占用线程，需要增加线程池大小
+server.tomcat.threads.max=150
+# 最小空闲线程数（默认 10）
+server.tomcat.threads.min-spare=20
+# 最大连接数（默认 8192）
+server.tomcat.max-connections=10000
+# 等待队列长度（默认 100）
+server.tomcat.accept-count=100
+# 连接超时时间（毫秒）
+server.tomcat.connection-timeout=20000
 
 management.endpoints.web.exposure.include=health,info
 
@@ -46,9 +71,9 @@ cleanup.on.start=0
 
 # ===== GLM-4.6 API 配置 =====
 # GLM API Key (请替换为你的实际 API Key)
-glm.api-key=997368444eb84f49950415255ef5a707.DgPiN0uDzSRgusFG
+glm.apiKey=997368444eb84f49950415255ef5a707.DgPiN0uDzSRgusFG
 # GLM API URL
-glm.api-url=https://open.bigmodel.cn/api/paas/v4
+glm.apiUrl=https://open.bigmodel.cn/api/paas/v4
 # 默认模型
 glm.model=glm-4
 # 请求超时时间（秒）
@@ -63,3 +88,9 @@ file.upload-dir=./uploads
 # 默认 Spring 限制为 1MB，这太小了
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
+
+# ===== 日志配置 =====
+# 降低 Spring Security 异步请求的错误日志级别
+# SSE 连接关闭时可能触发 "response already committed" 错误，这是正常现象
+logging.level.org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/].[dispatcherServlet]=WARN
+logging.level.org.springframework.security.web.access.ExceptionTranslationFilter=WARN
