修复一些bug和测试脚本放在postman文件夹下

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -82,7 +82,7 @@ glm.timeout=60
 # ===== 文件上传配置 =====
 # 我们的文件上传存储目录
 # 修改为项目内的uploads目录
-file.upload-dir=./uploads
+file.upload-dir=/home/appuser/uploads
 
 # 增加文件上传大小限制
 # 默认 Spring 限制为 1MB，这太小了
