账户的手机，密码加密

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
       - GLM_API_KEY=${GLM_API_KEY:?GLM_API_KEY is required}
       - GLM_API_URL=${GLM_API_URL:-https://open.bigmodel.cn/api/paas/v4}
       - GLM_MODEL=${GLM_MODEL:-glm-4}
+      - PHONE_ENCRYPTION_KEY_BASE64=${PHONE_ENCRYPTION_KEY_BASE64:?PHONE_ENCRYPTION_KEY_BASE64 is required}
+      - PHONE_HASH_PEPPER=${PHONE_HASH_PEPPER:?PHONE_HASH_PEPPER is required}
       - ALIYUN_OSS_ENDPOINT=${ALIYUN_OSS_ENDPOINT:?ALIYUN_OSS_ENDPOINT is required}
       - ALIYUN_OSS_ACCESS_KEY_ID=${ALIYUN_OSS_ACCESS_KEY_ID:?ALIYUN_OSS_ACCESS_KEY_ID is required}
       - ALIYUN_OSS_ACCESS_KEY_SECRET=${ALIYUN_OSS_ACCESS_KEY_SECRET:?ALIYUN_OSS_ACCESS_KEY_SECRET is required}
