--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -97,6 +97,9 @@ aliyun.oss.dir-prefix=${ALIYUN_OSS_DIR_PREFIX:attachments/}
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
 
+app.security.phone.encryption-key-base64=${PHONE_ENCRYPTION_KEY_BASE64}
+app.security.phone.hash-pepper=${PHONE_HASH_PEPPER}
+
 # ===== 日志配置 =====
 # 降低 Spring Security 异步请求的错误日志级别
 # SSE 连接关闭时可能触发 "response already committed" 错误，这是正常现象
