--- a/.env.example
+++ b/.env.example
@@ -30,5 +30,9 @@ ALIYUN_OSS_ACCESS_KEY_SECRET=
 ALIYUN_OSS_BUCKET_NAME=
 ALIYUN_OSS_DIR_PREFIX=attachments/
 
+# Security
+PHONE_ENCRYPTION_KEY_BASE64=
+PHONE_HASH_PEPPER=
+
 # Cloudflare Tunnel (required)
 CLOUDFLARED_TUNNEL_TOKEN=
