--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -100,6 +100,17 @@ spring.servlet.multipart.max-request-size=100MB
 app.security.phone.encryption-key-base64=${PHONE_ENCRYPTION_KEY_BASE64}
 app.security.phone.hash-pepper=${PHONE_HASH_PEPPER}
 
+# ===== RabbitMQ 配置 =====
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:guest}
+# 手动确认模式
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+# 消费者并发数
+spring.rabbitmq.listener.simple.concurrency=2
+spring.rabbitmq.listener.simple.max-concurrency=5
+
 # ===== 日志配置 =====
 # 降低 Spring Security 异步请求的错误日志级别
 # SSE 连接关闭时可能触发 "response already committed" 错误，这是正常现象
