--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
             <version>3.24.3</version>
         </dependency>
 
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
         <!-- Jackson (Redis 序列化) -->
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
