--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,8 +76,19 @@ glm.apiKey=${GLM_API_KEY}
 glm.apiUrl=${GLM_API_URL:https://open.bigmodel.cn/api/paas/v4}
 # 默认模型
 glm.model=${GLM_MODEL:glm-4}
+# 视觉模型
+glm.visionModel=${GLM_VISION_MODEL:glm-4.5v}
 # 请求超时时间（秒）
 glm.timeout=60
+
+# ===== Tencent ASR WebSocket 配置 =====
+tencent.asr.appId=${TENCENT_ASR_APP_ID:}
+tencent.asr.secretId=${TENCENT_ASR_SECRET_ID:}
+tencent.asr.secretKey=${TENCENT_ASR_SECRET_KEY:}
+tencent.asr.engineModelType=${TENCENT_ASR_ENGINE_MODEL_TYPE:16k_zh}
+tencent.asr.voiceFormat=${TENCENT_ASR_VOICE_FORMAT:1}
+tencent.asr.needVad=${TENCENT_ASR_NEED_VAD:1}
+tencent.asr.expiresInSeconds=${TENCENT_ASR_EXPIRES_IN_SECONDS:600}
 
 # ===== 文件上传配置 =====
 # 我们的文件上传存储目录
