--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+    env_file:
+      - .env
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/${MYSQL_DATABASE:-pandora_repo}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       - SPRING_DATASOURCE_USERNAME=${MYSQL_USER:-appuser}
@@ -70,6 +72,13 @@ services:
       - ALIYUN_OSS_ACCESS_KEY_SECRET=${ALIYUN_OSS_ACCESS_KEY_SECRET:?ALIYUN_OSS_ACCESS_KEY_SECRET is required}
       - ALIYUN_OSS_BUCKET_NAME=${ALIYUN_OSS_BUCKET_NAME:?ALIYUN_OSS_BUCKET_NAME is required}
       - ALIYUN_OSS_DIR_PREFIX=${ALIYUN_OSS_DIR_PREFIX:-attachments/}
+      - TENCENT_ASR_APP_ID=${TENCENT_ASR_APP_ID:-}
+      - TENCENT_ASR_SECRET_ID=${TENCENT_ASR_SECRET_ID:-}
+      - TENCENT_ASR_SECRET_KEY=${TENCENT_ASR_SECRET_KEY:-}
+      - TENCENT_ASR_ENGINE_MODEL_TYPE=${TENCENT_ASR_ENGINE_MODEL_TYPE:-16k_zh}
+      - TENCENT_ASR_VOICE_FORMAT=${TENCENT_ASR_VOICE_FORMAT:-1}
+      - TENCENT_ASR_NEED_VAD=${TENCENT_ASR_NEED_VAD:-1}
+      - TENCENT_ASR_EXPIRES_IN_SECONDS=${TENCENT_ASR_EXPIRES_IN_SECONDS:-600}
 
   nginx:
     image: nginx:1.27-alpine
@@ -90,7 +99,25 @@ services:
     depends_on:
       nginx:
         condition: service_started
-    command: tunnel --no-autoupdate --protocol http2 --edge-ip-version 4 run --token ${CLOUDFLARED_TUNNEL_TOKEN:?CLOUDFLARED_TUNNEL_TOKEN is required}
+    command: tunnel --no-autoupdate --protocol auto --ha-connections 4 --edge-ip-version 4 run --token ${CLOUDFLARED_TUNNEL_TOKEN:?CLOUDFLARED_TUNNEL_TOKEN is required}
+
+  cloudflared-1:
+    image: cloudflare/cloudflared:latest
+    container_name: pandora-cloudflared-1
+    restart: always
+    depends_on:
+      nginx:
+        condition: service_started
+    command: tunnel --no-autoupdate --protocol auto --ha-connections 4 --edge-ip-version 4 run --token ${CLOUDFLARED_TUNNEL_TOKEN:?CLOUDFLARED_TUNNEL_TOKEN is required}
+
+  cloudflared-2:
+    image: cloudflare/cloudflared:latest
+    container_name: pandora-cloudflared-2
+    restart: always
+    depends_on:
+      nginx:
+        condition: service_started
+    command: tunnel --no-autoupdate --protocol auto --ha-connections 4 --edge-ip-version 4 run --token ${CLOUDFLARED_TUNNEL_TOKEN:?CLOUDFLARED_TUNNEL_TOKEN is required}
 
   rabbitmq:
     image: rabbitmq:3.13-management-alpine
